<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonNuevoRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="GuardarRegitro"
            android:text="@string/ControlEquipo"
            android:textColor="#1E88E5"
            android:textColorHighlight="#777777"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Bienvenida"
            android:textColor="#00BCD4"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Herramientas"
            android:text="@string/Controlherramienta"
            android:textColor="#1E88E5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNuevoRegistro" />

        <ImageView
            android:id="@+id/imageViewGenerarDocumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CrearFactura"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewEntregarEquipo"
            app:layout_constraintStart_toEndOf="@+id/imageViewEntregarEquipo"
            app:layout_constraintTop_toTopOf="@+id/imageViewEntregarEquipo"
            app:srcCompat="@drawable/ic_twotone_price_change_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="infor"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewEntregarEquipo"
            app:layout_constraintEnd_toStartOf="@+id/imageViewEntregarEquipo"
            app:layout_constraintTop_toTopOf="@+id/imageViewEntregarEquipo"
            app:srcCompat="@drawable/ic_twotone_info_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageViewEntregarEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="EntregarEquipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:srcCompat="@drawable/ic_twotone_fact_check_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="RetrofitControllerview"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_actualizar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>